# Xorion-Web3-Beta-Multi-Chain-Wallet-SDK

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml
browser-extension/: 5)  manifest.json  popup.js  {
docs/: FAQ.md  README.md
src/: error.rs  kernel.rs  lib.rs
src/rpc/: ethereum.rs  solana.rs
xorion-governance/: Cargo.toml
xorion-gui/: Cargo.toml
xorion-privacy/: Cargo.toml
xorion-runtime/: Cargo.toml
xorion-scheme/: Cargo.toml
xorion-storage/: Cargo.toml
xorion-webapp/: Cargo.toml  index.html
xorion-website/: community.html  docs.html  download.html  features.html  index.html
xorion-website/js/: main.js
xos-gui/src/: main.rs
xos-scheme/src/: main.rs
